--- a/front-end/Assets/src/support-central-angular/package.json
+++ b/front-end/Assets/src/support-central-angular/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "config-npm": "npm config set @bmc-ux:registry http://cdn.bmc.com:4873/repository/bmc-ux/"
   },
   "private": true,
   "dependencies": {
