--- a/aem-project/pom.xml
+++ b/aem-project/pom.xml
@@ -33,6 +33,14 @@
 
     <dependencyManagement>
         <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.osgi/org.osgi.service.component.annotations -->
+<dependency>
+    <groupId>org.osgi</groupId>
+    <artifactId>org.osgi.service.component.annotations</artifactId>
+    <version>1.4.0</version>
+    <scope>provided</scope>
+</dependency>
+        
             <dependency>
                 <groupId>org.osgi</groupId>
                 <artifactId>org.osgi.core</artifactId>
@@ -377,6 +385,11 @@
 
     <build>
         <plugins>
+        	<plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-bundle-plugin</artifactId>
+                    <version>3.3.0</version>
+                </plugin>
             <plugin>
                 <groupId>com.day.jcr.vault</groupId>
                 <artifactId>content-package-maven-plugin</artifactId>
