--- a/front-end/Assets/src/support-central-angular/angular.json
+++ b/front-end/Assets/src/support-central-angular/angular.json
@@ -30,7 +30,8 @@
             "styles": [
               "src/styles.scss",
               "./node_modules/@bmc-ux/dpl-iconfont/dist/css/dpl-iconfont.css",
-              "./node_modules/@bmc-ux/adapt-css/dist/css/adapt-css-bs4.css"
+              "./node_modules/@bmc-ux/adapt-css/dist/css/adapt-css-bs4.css",
+              "./node_modules/intro.js/introjs.css"
             ],
             "scripts": []
           },
