--- a/front-end/Assets/src/support-central-angular/package.json
+++ b/front-end/Assets/src/support-central-angular/package.json
@@ -25,6 +25,7 @@
     "@bmc-ux/adapt-css": "^4.56.0",
     "@bmc-ux/dpl-iconfont": "^2.88.0",
     "classlist.js": "^1.1.20150312",
+    "intro.js": "^3.3.1",
     "primeng": "^8.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
